# CPP_Exercises

TP1/: CMakeLists.txt  helloworld.cpp
TP1/chap01/: 1-hello_world.cpp  2-parrot.cpp  3-array.cpp  4-calculator.cpp
src/: ArrayNode.cpp  ArrayNode.hpp  Board.hpp  Card.hpp  IntLeaf.cpp  IntLeaf.hpp  JsonParser.cpp  Kid.hpp  Kitchen.cpp  Kitchen.hpp  Leaf.hpp  Monster.hpp  Node.cpp  Node.hpp  ObjectNode.cpp  ObjectNode.hpp  PC.h  Plush.hpp  PlushStore.hpp  Pokeball.h  Pokemon.h  Spell.hpp  StringLeaf.cpp  StringLeaf.hpp  Trainer.h  Trap.hpp  ex1.cpp  ex1.hpp  ex3.hpp  image.hpp  pixels.hpp  translator.cpp  uge_unique_ptr.hpp
